[tool.poetry]
name = "prefect-ascii-brightcove-vimeo"
version = "0.1.0"
description = ""
authors = ["myohei <yohei.maeda.11@gmail.com>"]
license = "myohei"

[tool.poetry.dependencies]
python = "^3.10"
prefect = ">=2.0b"
dataclasses-json = "^0.5.7"
greenlet = "^1.1.2"
aiohttp = "^3.8.1"
smart-open = "^6.0.0"
boto3 = "^1.23.2"
aiosqlite = "^0.17.0"
ffmpeg-python = "^0.2.0"
python-ffmpeg-video-streaming = "^0.1.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
